2011-10-14  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-zlib, mingw32-bzip2, mingw32-xz.

	* mingw32/mingw32-zlib.xml: Update to zlib-1.2.5-4.
	* mingw32/mingw32-bzip2.xml: Update to bzip2-1.0.6-4.
	* mingw32/mingw32-xz.xml: Update to xz-5.0.3-2.
	* mingw32/issue.log: Update accordingly.

2011-10-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make "source" and "licence" tarname resolution deterministic.

	* mingw32/mingw32-autoconf.xml (source, licence): Append ".%" to
	tarname attribute, where no explicit compression type is specified.
	* mingw32/mingw32-automake.xml (source, licence): Likewise.
	* mingw32/mingw32-basic-bsdtar.xml (source, licence): Likewise.
	* mingw32/mingw32-binutils.xml (source, licence): Likewise.
	* mingw32/mingw32-bzip2.xml (source, licence): Likewise.
	* mingw32/mingw32-cygutils.xml (source, licence): Likewise.
	* mingw32/mingw32-expat.xml (source, licence): Likewise.
	* mingw32/mingw32-gcc-tools.xml (source, licence): Likewise.
	* mingw32/mingw32-gendef.xml (source, licence): Likewise.
	* mingw32/mingw32-gettext.xml (source, licence): Likewise.
	* mingw32/mingw32-libarchive.xml (source, licence): Likewise.
	* mingw32/mingw32-libiconv.xml (source, licence): Likewise.
	* mingw32/mingw32-libtool.xml (source, licence): Likewise.
	* mingw32/mingw32-make.xml (source, licence): Likewise.
	* mingw32/mingw32-mgwport.xml (source, licence): Likewise.
	* mingw32/mingw32-mingw-get.xml (source, licence): Likewise.
	* mingw32/mingw32-mingw-utils.xml (source, licence): Likewise.
	* mingw32/mingw32-pdcurses.xml (source, licence): Likewise.
	* mingw32/mingw32-pexports.xml (source, licence): Likewise.
	* mingw32/mingw32-popt.xml (source, licence): Likewise.
	* mingw32/mingw32-xz.xml (source, licence): Likewise.
	* mingw32/mingw32-zlib.xml (source, licence): Likewise.

	* mingw32/issue.log: Update to capture above changes; publish all.

	* msys/msys-core.xml (package): Add alias="msysCORE" attribute.