@@ -31,7 +31,7 @@
   026fd2d0fabe053455e2ca45cd0bb1b1be816305 2011101100 msys-bash.xml
   e52982cbff0b0bb825461deb9af0411f72f2e4a2 2010090600 msys-binutils.xml
   0a5427440a7eb58b9050ffe905070f0395912878 2011101100 msys-bison.xml
-  83b36d7edd1cc391ec00dc9cbb32ba275776d215 2011101100 msys-bzip2.xml
+  c03a3c1dfa5854350b2d2d0a1c3852792f485094 2011101400 msys-bzip2.xml
   7b2f03518cc80005b37670419a0bf9ef770a37a1 2011101100 msys-console.xml
   186a721a84c208b148db9cfff05c280045ae6f0f 2011101100 msys-core.xml
   c2bdd0aaadeb88b13dad49361c4cbdb152b5c3d4 2011101100 msys-coreutils.xml
@@ -90,6 +90,6 @@
   fe8fd3bf13c92bc9792636e7f9d07b38a574368f 2011101100 msys-wget.xml
   51d1df6286ba0e94be02a42823fc4ef1a9c24587 2011101100 msys-xz.xml
   352e88a18d2369c4955a52740920c50639b43baf 2011101100 msys-zip.xml
-  0fc1fd5236cdab87b77da6efa54205be0925dec7 2011101100 msys-zlib.xml
+  94b099c93c13b9aef6b0a01218605f9f6e6b5dbc 2011101400 msys-zlib.xml
 #
 # $RCSfile$: end of file
