@@ -22,20 +22,24 @@
           the zlib dll component does not specify a soname
           -->
         <release tarname="zlib-1.2.3-2-msys-1.0.13-dll.tar.lzma" />
+        <release tarname="zlib-1.2.5-1-msys-1.0.17-dll.tar.lzma" />
         <requires eq="msys-core-*-msys-*-bin.tar" />
       </component>
 
       <component class="dev">
         <release tarname="zlib-1.2.3-2-msys-1.0.13-dev.tar.lzma" />
+        <release tarname="zlib-1.2.5-1-msys-1.0.17-dev.tar.lzma" />
         <requires eq="msys-zlib-%-msys-%-dll.tar" />
       </component>
 
       <component class="doc">
         <release tarname="zlib-1.2.3-2-msys-1.0.13-doc.tar.lzma" />
+        <release tarname="zlib-1.2.5-1-msys-1.0.17-doc.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="zlib-1.2.3-2-msys-1.0.13-lic.tar.lzma" />
+        <release tarname="zlib-1.2.5-1-msys-1.0.17-lic.tar.lzma" />
       </component>
     </package>
 
